# imgdoc2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: sqlite_cmakelists.txt
doc/: database_structure.md  document_concepts.md  mission_statement.md
dotnet/: CMakeLists.txt  CustomCodeAnalysisRules.ruleset  imgdoc2Net.sln
dotnet/ImgDoc2Net_UnitTests/: CreateDocumentTests.cs  CreateOptionsTests.cs  ImgDoc2Net_UnitTests.csproj  NonParallelCollectionDefinitionClass.cs  QueryTests.cs  Read2dTests.cs  Read2dWrite2dTests.cs  Utilities.cs
dotnet/ImgDoc2Playground_Framework/: ImgDoc2Playground_Framework.csproj  Program.cs
dotnet/ImgDoc2Playground_Framework/Properties/: AssemblyInfo.cs
dotnet/ImgDoc2Playground_NetCore/: Program.cs
dotnet/ImgDoc2Playground_NetCore/Properties/: launchSettings.json
dotnet/imgdoc2Net/: CreateOptions.cs  Dimension.cs  Factory.cs  ImgDoc2Net.csproj
dotnet/imgdoc2Net/Implementation/: CreateOptions.cs  Dimension.cs  DimensionQueryClause.cs  Document.cs  Read2d.cs  TileCoordinate.cs  TileInfoQueryClause.cs  Write2d.cs
dotnet/imgdoc2Net/Interfaces/: DataType.cs  ICreateOptions.cs  IDimensionQueryClause.cs  IDocument.cs  IRead2d.cs  ITileCoordinate.cs  ITileInfoQueryClause.cs  IWrite2d.cs  ImgDoc2Statistics.cs  LogicalPosition.cs  PixelType.cs  QueryOptions.cs  Rectangle.cs  Tile2dBaseInfo.cs  Write2dExtensions.cs
dotnet/imgdoc2Net/Interop/: DllLoader.cs  DllLoaderLinux.cs  DllLoaderWindows.cs  ImgDoc2ApiInterop.cs  ImgDoc2Exception.cs  Utilities.cs
imgdoc2API/: CMakeLists.txt  dimcoordinatequeryclauseinterop.h  errorcodes.h  imgdoc2API.cpp  imgdoc2API.h  importexport.h  logicalpositioninfointerop.h  queryresultinterop.h  rectangledoubleinterop.h  statisticsinterop.h  tilebaseinfointerop.h  tilecoordinateinterop.h  tileinfoqueryclauseinterop.h  utilities.cpp  utilities.h
imgdoc2cmd/: CMakeLists.txt  imgdoc2cmd.cpp
libimgdoc2/: CMakeLists.txt
libimgdoc2/inc/: ClassFactory.h  DataTypes.h  DimCoordinateQueryClause.h  IBlobOutput.h  ICreateOptions.h  IDataObj.h  IDatabaseTransaction.h  IDbIndexManagement.h  IDimCoordinateQueryClause.h  IDoc.h  IDocRead2d.h  IEnvironment.h  IOpenExistingOptions.h  ITIleInfoQueryClause.h  ITileCoordinate.h  SqliteImgDocException.h  TileBaseInfo.h  TileInfoQueryClause.h  exceptions.h  imgdoc2.h  types.h
libimgdoc2/inc/impl/: BlobOutputImplementations.h  DataObjectImplementations.h
libimgdoc2/src/: BlobOnHeap.cpp  CCustomQueries.cpp  CCustomQueries.h  CoordinateData.cpp  Db.h  DbBase.h  DbCreation.cpp  DbCreation.h  DbCreation3D.cpp  DbCreation3D.h  DbDiscover.cpp  DbGlobalInfo.cpp  DbGlobalInfo.h  DbGlobalInfo3D.cpp  DbGlobalInfo3D.h  DbRead.h  DbReadCommon.h  DbWrite.h  DbWrite3D.h  QueryBuildUtils.h  dbutils.h  miscutilities.h  test_main.cpp
libimgdoc2/src/db/: DbFactory.h  IDbConnection.h  database_configuration.h  database_constants.h  database_creator.cpp  database_creator.h  utilities.cpp  utilities.h
libimgdoc2/src/db/sqlite/: custom_functions.h  sqlite_DbConnection.cpp  sqlite_DbConnection.h  sqlite_DbFactory.cpp  sqlite_DbStatement.cpp
libimgdoc2/src/doc/: document.h  documentRead2d.cpp  documentRead2d.h  documentWrite2d.cpp  documentWrite2d.h  transactionHelper.h
libimgdoc2/src/public/: ClassFactory.cpp  CreateOptions.cpp  exceptions.cpp
libimgdoc2_a/: CMakeLists.txt
libimgdoc2_a/inc/: ClassFactory.h  CreateOptions.h  DataTypes.h  DimCoordinateQueryClause.h  IBlob.h  IDataObj.h  IDoc.h  IDocRead2d.h  IDocWrite2d.h  IReader2d.h  ITileCoordinate.h  IWriter2d.h  TileBaseInfo.h  TileCoordinate.h  TileDataStorageType.h  exceptions.h  imgdoc2.h  types.h
libimgdoc2_a/src/db/: IDbConnection.h  IDbStatement.h  database_configuration.cpp  database_configuration.h  database_creator.cpp  database_creator.h  utilities.cpp  utilities.h
libimgdoc2_a/src/db/sqlite/: custom_functions.cpp  sqlite_DbConnection.cpp  sqlite_DbConnection.h  sqlite_DbFactory.cpp  sqlite_DbStatement.cpp  sqlite_DbStatement.h
libimgdoc2_a/src/doc/: document.cpp  document.h  documentRead2d.cpp  documentRead2d.h  documentWrite2d.cpp  documentWrite2d.h
libimgdoc2_a/src/public/: CreateOptions.cpp  exceptions.cpp
libimgdoc2_tests/: CMakeLists.txt  blobdata_test.cpp  db_utilities_test.cpp  dbdiscovery_test.cpp  pch.h  propertybagutilities_test.cpp  query2d_test.cpp  query_test.cpp  read2d_test.cpp  testUtilities.h
libimgdoc2_v2/: .clang-tidy  CMakeLists.txt
libimgdoc2_v2/inc/: ClassFactory.h  CreateOptions.h  DimCoordinateQueryClause.h  IBlobOutput.h  ICreateOptions.h  IDataObj.h  IDatabaseTransaction.h  IDbWriteTransaction.h  IDimCoordinateQueryClause.h  IDoc.h  IDocRead2d.h  IDocWrite2d.h  IOpenExistingOptions.h  ITIleInfoQueryClause.h  LogicalPositionInfo.h  imgdoc2.h  types.h  utilities.h
libimgdoc2_v2/inc/impl/: BlobOutputImplementations.h  DataObjectImplementations.h
libimgdoc2_v2/src/db/: DbFactory.h  IDb.h  IDbConnection.h  IDbStatement.h  database_configuration.cpp  database_configuration.h  database_constants.cpp  database_constants.h  database_creator.cpp  database_creator.h  database_discovery.cpp  database_discovery.h  utilities.cpp  utilities.h
libimgdoc2_v2/src/db/sqlite/: ISqlite_DbStatement.h  custom_functions.cpp  custom_functions.h  sqlite_DbConnection.cpp  sqlite_DbConnection.h  sqlite_DbFactory.cpp  sqlite_DbStatement.cpp  sqlite_DbStatement.h
libimgdoc2_v2/src/doc/: document.cpp  document.h  documentRead2d.cpp  documentRead2d.h  documentWrite2d.cpp  documentWrite2d.h  transactionHelper.h
libimgdoc2_v2/src/public/: ClassFactory.cpp  CreateOptions.cpp  OpenExistingOptions.cpp
libimgdoc2_v2_tests/: CMakeLists.txt  blobdata_test.cpp  db_utilities_test.cpp  dbdiscovery_test.cpp  propertybagutilities_test.cpp  query2d_test.cpp
